@@ -23,16 +23,17 @@ HEAD
 	+ New option to configure maximum_object_size which defaults to 300 MB
 	+ Add refresh_pattern options for Microsoft Windows, Debian and Ubuntu
 	updates
+	+ Removed dead code in dumpConfig/restoreConfig methods
 1.3.14
 	+ Bugfix: in restartService we assure that all files are in place
-	before restarting the daemons
+	before restarting the 
 	+ Changed labels in cache exemptions form 'domain' to 'domain name
 	address' to make clearer the actual working of the feature
 	+ Better help messages for time period parameters
 	+ Added custom script to delay downtime while log rotation is done
 	+ Only unzip domain categoris archives when they have changed,
 	this speeds up the module startup
-	+ You can establish the same policies for ULRs than for full domains
+	+ You can establish the same policies for URLs than for full domains
 1.3.13
 	+ Switching antivirus from clamavscan to clamdscan
 	+ Better MIME type check, removed false negatives with some subtypes
